[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "DLD_tool"
version = "0.1.0"
description = "Reusable deep learning training utilities"
authors = [{name="Jayeon"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch",
    "numpy",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]